--- a/src/styles/_widgets.scss
+++ b/src/styles/_widgets.scss
@@ -14,6 +14,7 @@
 			width: 50px;
 		}
 
+		//contact buttons switch colors to match background
 		.phone { background-image: url(https://s3.amazonaws.com/lester-misc/crowded-resume/phone-white.gif); }
 		.mail { background-image: url(https://s3.amazonaws.com/lester-misc/crowded-resume/email-white.gif); }
 	}
@@ -45,6 +46,7 @@
 
 	.mail {
 		background-image: url(https://s3.amazonaws.com/lester-misc/crowded-resume/email.gif);
+		//added animation delay is used to create a stagger effect
 		animation-delay: 2.1s;
 	}
 
